# mopidy-snapduck

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
mopidy_snapduck/: __init__.py  ext.conf  frontend.py
tests/: test_extension.py
