[metadata]
name = Mopidy-Snapduck
version = 1.0.0
url = https://github.com/daniele-athome/mopidy-snapduck
author = Daniele Ricci
author_email = daniele+pypi@casaricci.it
license = GPLv3
license_file = LICENSE
description = Mopidy extension for controlling a local Snapcast client
long_description = file: README.md
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.0.0
    Pykka >= 2.0.1
    setuptools


[options.extras_require]
lint =
    check-manifest
    flake8
    flake8-bugbear
    flake8-import-order
    isort[pyproject]
test =
    pytest
    pytest-cov
dev =
    %(lint)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    snapduck = mopidy_snapduck:Extension


[flake8]
application-import-names = mopidy_snapduck, tests
max-line-length = 120
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # BLK100: Black would change this
    BLK100
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
